--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Unofficial SDK for using the IEX API.",
   "main": "index.js",
   "scripts": {
-    "test": "tsc --no-emit --pretty"
+    "prebuild": "rm -rf build",
+    "build": "tsc",
+    "pretest": "npm run build",
+    "test": "./node_modules/.bin/mocha --require source-map-support/register 'build/**/__tests__/*.js'",
   },
   "repository": {
     "type": "git",
@@ -28,7 +31,12 @@
     "isomorphic-fetch": "^2.2.1"
   },
   "devDependencies": {
+    "@types/chai": "^4.0.5",
     "@types/isomorphic-fetch": "0.0.34",
+    "@types/mocha": "^2.2.44",
+    "chai": "^4.1.2",
+    "mocha": "^4.0.1",
+    "source-map-support": "^0.5.0",
     "typescript": "^2.6.1"
   }
 }
