--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "build": "tsc",
     "pretest": "npm run build",
     "test": "./node_modules/.bin/mocha --require source-map-support/register 'build/**/__tests__/*.js'",
+    "gitcheck": "git diff-index --quiet HEAD --",
+    "removetests": "find build -name __tests__ -type d -exec rm -r {} +",
+    "copystatic": "cp package.json LICENSE README.md build/",
+    "predist": "npm run gitcheck && npm run test && npm run removetests && npm run copystatic",
+    "dist": "cd build && npm run publish",
+    "prepublish": "[[ \"$PWD\" =~ build ]]"
   },
   "repository": {
     "type": "git",
