Use prepublishOnly script instead of prepublish
The prepublish event is run not only before publish, but before install
as well. This behavior is not desired, and as of npm@4.0.0, an event
called prepublishOnly does what we want.

See the npm documentation for further details:
https://docs.npmjs.com/misc/scripts#prepublish-and-prepare

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "copystatic": "cp package.json LICENSE README.md build/",
     "predist": "npm run gitcheck && npm run test && npm run removetests && npm run copystatic",
     "dist": "cd build && npm publish",
-    "prepublish": "[[ \"$PWD\" =~ build ]]"
+    "prepublishOnly": "[[ \"$PWD\" =~ build ]]"
   },
   "repository": {
     "type": "git",
