--- a/package.json
+++ b/package.json
@@ -33,12 +33,9 @@
     "url": "https://github.com/bilalq/iex-api/issues"
   },
   "homepage": "https://github.com/bilalq/iex-api#readme",
-  "dependencies": {
-    "isomorphic-fetch": "^2.2.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/chai": "^4.0.5",
-    "@types/isomorphic-fetch": "0.0.34",
     "@types/mocha": "^2.2.44",
     "chai": "^4.1.2",
     "mocha": "^4.0.1",
