--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "prebuild": "rm -rf build",
     "build": "tsc",
+    "pretest": "tsc --noEmit --pretty",
     "test": "jest",
     "gitcheck": "git diff-index --quiet HEAD --",
     "copystatic": "cp package.json .npmignore LICENSE README.md build/",
