--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "jest",
     "gitcheck": "git diff-index --quiet HEAD --",
     "copystatic": "cp package.json .npmignore LICENSE README.md build/",
-    "predist": "npm run gitcheck && npm run test && npm run copystatic",
+    "predist": "npm run gitcheck && npm run test && npm run build && npm run copystatic",
     "dist": "cd build && npm publish",
     "prepublishOnly": "[[ \"$PWD\" =~ build ]]"
   },
