--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "prebuild": "rm -rf build",
     "build": "tsc",
-    "pretest": "tsc --noEmit --pretty",
+    "lint": "tslint --project . --format stylish",
+    "pretest": "tsc --noEmit --pretty && npm run lint",
     "test": "jest",
     "gitcheck": "git diff-index --quiet HEAD --",
     "copystatic": "cp package.json .npmignore LICENSE README.md build/",
@@ -37,6 +38,7 @@
     "@types/jest": "^21.1.8",
     "jest": "^21.2.1",
     "ts-jest": "^21.2.4",
+    "tslint": "^5.8.0",
     "typescript": "^2.6.2"
   },
   "jest": {
