--- a/demo/package.json
+++ b/demo/package.json
@@ -8,6 +8,7 @@
     "build:live": "nodemon --exec ./node_modules/.bin/ts-node -- ./index.ts"
   },
   "dependencies": {
+    "fetch-ponyfill": "^6.0.2",
     "inquirer": "^6.0.0",
     "socket.io-client": "^2.1.1"
   },
