--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "iex-api",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Unofficial SDK for using the IEX API.",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
     "prebuild": "rm -rf build",
     "build": "tsc",
