@Quietfoundation pull changes (#3)
* Websocket client and TOPS subscription

* add demo project

* cleanup

* deep service

* client to fetch tops and deep data

* add some test coverage

* socket exception handling

* URL encode symbols

* export websocket client and market data. fix Book typing

* Export stock interface

* Expose stockBatch call

* Revert package.json change

* Add high/low fields

* Abstract socket creation to allow app to specify config options

* Lazily create DEEP socket, test passing in custom config

* Propagate union type

* Add chart params

* MIL-1022-todays-earnings

* earnings data change

* 0.0.4

* MIL-1020-market-performance

* array type

* import lint fix

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "iex-api",
   "version": "0.0.4",
   "description": "Unofficial SDK for using the IEX API.",
-  "main": "src/index.ts",
+
+  "types": "index.d.ts",
   "scripts": {
     "prebuild": "rm -rf build",
     "build": "tsc",
