--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bilalq/iex-api.git"
+    "url": "git+https://github.com/luxcium/iex-api.git"
   },
   "keywords": [
     "iex",
