--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "tslint --project . --format stylish",
     "pretest": "tsc --noEmit --pretty && npm run lint",
     "test": "jest",
-    "gitcheck": "git diff-index --quiet HEAD --",
+    "gitcheck": "git diff-index   origin/master",
     "copystatic": "cp package.json .npmignore LICENSE README.md build/",
     "predist": "npm run gitcheck && npm run test && npm run build && npm run copystatic",
     "dist": "cd build && npm publish",
