--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,15 @@
 {
-
+  "arrowParens": "avoid",
+  "bracketSpacing": true,
+  "endOfLine": "auto",
+  "htmlWhitespaceSensitivity": "css",
+  "insertPragma": true,
+  "printWidth": 80,
+  "proseWrap": "preserve",
+  "rangeStart": 0,
+  "semi": true,
+  "singleQuote": true,
+  "tabWidth": 2,
+  "trailingComma": "es5",
+  "useTabs": false
 }
