--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   "homepage": "https://github.com/bilalq/iex-api#readme",
   "dependencies": {
     "rxjs": "^6.2.2",
-    "socket.io-client": "^2.1.0"
+    "socket.io-client": "^2.1.0",
+    "typescript-tslint-plugin": "^0.3.1"
   },
   "devDependencies": {
     "@types/jest": "^21.1.8",
