--- a/package.json
+++ b/package.json
@@ -35,8 +35,14 @@
   },
   "homepage": "https://github.com/bilalq/iex-api#readme",
   "dependencies": {
+    "prettier": "^1.16.4",
+    "prettier-tslint": "^0.4.2",
     "rxjs": "^6.2.2",
     "socket.io-client": "^2.1.0",
+    "tslint-config-airbnb": "^5.11.1",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-eslint-rules": "^5.4.0",
+    "typescript": "^3.3.3333",
     "typescript-tslint-plugin": "^0.3.1"
   },
   "devDependencies": {
@@ -44,10 +50,9 @@
     "@types/npm": "^2.0.29",
     "@types/socket.io-client": "^1.4.32",
     "fetch-ponyfill": "^4.1.0",
-    "jest": "^21.2.1",
-    "ts-jest": "^21.2.4",
-    "tslint": "^5.8.0",
-    "typescript": "^2.6.2"
+    "jest": "^24.1.0",
+    "ts-jest": "^24.0.0",
+    "tslint": "^5.8.0"
   },
   "jest": {
     "collectCoverage": true,
