--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "noImplicitAny": true,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
-    "noImplicitThis": true,
+    "noImplicitThis": false,
     "alwaysStrict": true,
 
     /* Additional Checks */
@@ -25,7 +25,7 @@
 
     /* Module Resolution Options */
     "moduleResolution": "node",
-    "rootDir": "src",
+    // "rootDir": "src",
     "allowSyntheticDefaultImports": true,
 
     /* Source Map Options */
